--- a/read_cc/package.json
+++ b/read_cc/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cc",
   "version": "1.0.0",
-  "description": "read crexit card information",
+  "description": "read virtual credit card information",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
